--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   camera_camera: any
+  camera: ^0.10.0
   provider: ^6.0.5
   video_player: ^2.4.10
   flutter_spinkit: ^5.1.0
